--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,29 @@ b=c
 
 print("a=", a)
 print("b=", b)
+
+
+
+
+
+a=int(input("a="))
+b=int(input("b="))
+
+a= a + b
+b= a - b
+a= a - b
+
+print("a=", a)
+print("b=", b)
+
+
+
+
+
+a=(input("a="))
+b=(input("b="))
+
+a,b = b,a
+
+print("a=", a)
+print("b=", b)
